tests/ui/impl-trait/bare-trait-object-return.stderr
error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/issue-18107.rs:4:5
   |
LL |     dyn AbstractRenderer
   |     ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL -     dyn AbstractRenderer
LL +     impl AbstractRenderer
   |
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL ~     Box<dyn AbstractRenderer>
LL |
LL | {
LL |     match 0 {
LL ~         _ => Box::new(unimplemented!())
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0746`.
